<resources>
    <string name="app_name">Tabour</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_deletion_verified_sub_title">To make reservations, please register your account once again</string>
    <string name="account_deletion_verified_title">Your Account Has Been Deleted!</string>
    <string name="add_to_calendar_desc">Do you want to add this booking to your device calendar?</string>
    <string name="amenities">Amenities</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_language_arabic">العربية</string>
    <string name="app_language_english">English</string>
    <string name="app_localization_code">en</string>
    <string name="app_sub_title">For a seamless dining experience</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="availability">Availability</string>
    <string name="based_on_no_of_reviews">Based on %d reviews</string>
    <string name="book_now">Book Now</string>
    <string name="booking_confirmed">Booking Confirmed</string>
    <string name="bottom_navigation_btn_calendar">Calendar</string>
    <string name="bottom_navigation_btn_favorites">Favourites</string>
    <string name="bottom_navigation_btn_home">Home</string>
    <string name="bottom_navigation_btn_map">Map</string>
    <string name="bottom_navigation_btn_notifications">Notifications</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="custom_bottom_sheet_behavior">com.tabour.hospitality.utils.LockableBottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_back_to_home">Back to home</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_cancel_booking">Cancel booking</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_confirm_register">Yes, create my account</string>
    <string name="btn_edit_booking">Edit booking</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_get_started">Get started</string>
    <string name="btn_go_to_profile">Go to Profile</string>
    <string name="btn_leave_queue">Leave Queue</string>
    <string name="btn_next">Next</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">OK</string>
    <string name="btn_save">Save</string>
    <string name="btn_share_feedback">Share Feedback</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_update">Update</string>
    <string name="btn_yes">Yes</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="com.crashlytics.android.build_id">e557ba2ef2d54958a40ab8517486fc6c</string>
    <string name="comments">Comments…</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="confirm_your_booking">Confirm your booking</string>
    <string name="cuisines">Cuisines</string>
    <string name="cuisines_search_result_count">We found %1$d results for Cuisines</string>
    <string name="currently_unavailable">Currently Unavailable</string>
    <string name="date_at_time">%s at %s</string>
    <string name="datelib_am">AM</string>
    <string name="datelib_day_01">Sunday</string>
    <string name="datelib_day_02">Monday</string>
    <string name="datelib_day_03">Tuesday</string>
    <string name="datelib_day_04">Wednesday</string>
    <string name="datelib_day_05">Thursday</string>
    <string name="datelib_day_06">Friday</string>
    <string name="datelib_day_07">Saturday</string>
    <string name="datelib_day_short_01">Sun</string>
    <string name="datelib_day_short_02">Mon</string>
    <string name="datelib_day_short_03">Tue</string>
    <string name="datelib_day_short_04">Wed</string>
    <string name="datelib_day_short_05">Thu</string>
    <string name="datelib_day_short_06">Fri</string>
    <string name="datelib_day_short_07">Sat</string>
    <string name="datelib_day_single_01">S</string>
    <string name="datelib_day_single_02">M</string>
    <string name="datelib_day_single_03">T</string>
    <string name="datelib_day_single_04">W</string>
    <string name="datelib_day_single_05">T</string>
    <string name="datelib_day_single_06">F</string>
    <string name="datelib_day_single_07">S</string>
    <string name="datelib_month_01">January</string>
    <string name="datelib_month_02">February</string>
    <string name="datelib_month_03">March</string>
    <string name="datelib_month_04">April</string>
    <string name="datelib_month_05">May</string>
    <string name="datelib_month_06">June</string>
    <string name="datelib_month_07">July</string>
    <string name="datelib_month_08">August</string>
    <string name="datelib_month_09">September</string>
    <string name="datelib_month_10">October</string>
    <string name="datelib_month_11">November</string>
    <string name="datelib_month_12">December</string>
    <string name="datelib_month_short_01">Jan</string>
    <string name="datelib_month_short_02">Feb</string>
    <string name="datelib_month_short_03">Mar</string>
    <string name="datelib_month_short_04">Apr</string>
    <string name="datelib_month_short_05">May</string>
    <string name="datelib_month_short_06">Jun</string>
    <string name="datelib_month_short_07">Jul</string>
    <string name="datelib_month_short_08">Aug</string>
    <string name="datelib_month_short_09">Sep</string>
    <string name="datelib_month_short_10">Oct</string>
    <string name="datelib_month_short_11">Nov</string>
    <string name="datelib_month_short_12">Dec</string>
    <string name="datelib_pm">PM</string>
    <string name="default_notification_channel_id">host_default_channel</string>
    <string name="default_web_client_id">815706991911-0vssosj355eej4r5kltnljhg69hbc5ki.apps.googleusercontent.com</string>
    <string name="delete_account_dialog_message">If you delete your account, you will permanently lose your profile and bookings</string>
    <string name="delete_account_dialog_question">Delete account?</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="description_verify_email">We have sent a verification link to %s. Please check your mail</string>
    <string name="diners_are_in_queue">diners are in queue</string>
    <string name="diners_are_in_queue_uppercase">Diners Are In Queue</string>
    <string name="diners_in_queue">Diners in queue</string>
    <string name="distance_from_me">Distance from me</string>
    <string name="number_not_found">This number %1$s has not been found. Please create a new account.</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="terms_of_use">I agree to the Terms of Use</string>
    <string name="register">Register</string>
    <string name="enter_another_number">Enter another number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login_alert">Login Alert!</string>
    <string name="go_to_login">To use this functionality, \nplease login first.</string>
    <string name="mobile_number_updated">Mobile Number Updated !</string>
    <string name="mob_number_updated_sub_text">Discover Restaurants Across Qatar And Have A Seamless Dining Experience Now!</string>
    <string name="email_address">Email Address</string>
    <string name="optional_only"> (Optional)</string>
</resources>