<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:context=".activity.LoginActivity">

        <LinearLayout
            android:id="@+id/logo_con"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:src="@drawable/tabour_logo"
                android:scaleType="fitCenter"
                android:contentDescription="@string/app_name"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_register_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/logo_con"
            android:background="@drawable/login_page_curve"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofia_pro_medium"
                    android:gravity="start"
                    android:text="@string/register"
                    android:textAlignment="gravity"
                    android:textColor="@color/h_text_color"
                    android:textDirection="locale"
                    android:textSize="26sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_num_not_found"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/number_not_found"
                    android:textAlignment="gravity"
                    android:textDirection="locale"
                    android:textSize="15sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/text_sub_heading_faint"
                    android:fontFamily="@font/sofia_pro_regular"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/first_name"
                    android:textAlignment="gravity"
                    android:textDirection="locale"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="normal"
                    android:fontFamily="@font/sofia_pro_medium" />

                <EditText
                    android:id="@+id/edt_fstname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/editext_background"
                    android:hint="@string/enter_first_name"
                    android:padding="15dp"
                    android:textSize="15sp"
                    android:inputType="text"
                    android:textColor="@color/phnnum_txt_color"
                    android:fontFamily="@font/sofia_pro_regular"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/last_name"
                    android:textAlignment="gravity"
                    android:textDirection="locale"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/sofia_pro_medium" />

                <EditText
                    android:id="@+id/edt_lstname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/editext_background"
                    android:hint="@string/enter_last_name"
                    android:padding="15dp"
                    android:textSize="15sp"
                    android:inputType="text"
                    android:textColor="@color/phnnum_txt_color"
                    android:fontFamily="@font/sofia_pro_regular"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/email_address"
                        android:textAlignment="gravity"
                        android:textDirection="locale"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/sofia_pro_medium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/optional_only"
                        android:textAlignment="gravity"
                        android:textDirection="locale"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/sofiapro_light" />


                </LinearLayout>

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/editext_background"
                    android:hint="@string/enter_your_email"
                    android:padding="15dp"
                    android:textSize="15sp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/phnnum_txt_color"
                    android:fontFamily="@font/sofia_pro_regular"/>

            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/trmsncndtns"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleX="1.3"
                android:scaleY="1.3"
                android:buttonTint="@color/colorAccent" />

            <TextView
                android:id="@+id/trms_cndtns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/terms_of_use"
                android:textAlignment="gravity"
                android:textDirection="locale"
                android:textSize="15sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/text_sub_heading_faint"
                android:fontFamily="@font/sofia_pro_regular"/>

        </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:text="@string/register"
                android:fontFamily="@font/sofia_pro_medium"
                android:textSize="19sp"
                android:background="@drawable/background_skin"
                android:backgroundTint="@color/colorAccent"
                android:textAllCaps="false"
                />

            <LinearLayout
                android:id="@+id/lyt_contn_as_another_num"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_another_number"
                    android:textAlignment="gravity"
                    android:textDirection="locale"
                    android:textSize="16sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/sofia_pro_medium"
                    android:textStyle="normal"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorAccent"/>


            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/lyt_register_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

