<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:nestedScrollingEnabled="true"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@drawable/top_rounded_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_success"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:translationZ="2dp"
                    android:src="@drawable/successqueue"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/app_name"
                    />

            </RelativeLayout>

            <LinearLayout
                    android:id="@+id/lyt_edit_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/mobile_number_updated"
                            android:textAlignment="gravity"
                            android:textDirection="locale"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            android:textColor="@color/colorPrimary"
                            android:fontFamily="@font/sofia_pro_medium" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/mob_number_updated_sub_text"
                            android:textAlignment="gravity"
                            android:textDirection="locale"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            android:textColor="@color/confirmbooking_icon_color"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:fontFamily="@font/sofia_pro_regular" />

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_Book_now"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_height="50dp"
                        android:textColor="@color/white"
                        android:text="@string/book_now"
                        android:fontFamily="@font/sofia_pro_medium"
                        android:textSize="19sp"
                        android:background="@drawable/background_skin"
                        android:backgroundTint="@color/colorAccent"
                        android:textAllCaps="false"
                        />

                </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>


